v1.1 - 2011/12/29
=================

  - Tads virtual machines and compilers updated to 2.5.15/3.1.0.  Tads
    3.1 introduces network capabilities and currently it is not possible
    to build the package without network support.  pthreads, sockets and
    libcurl are required for a successful build.

  - Compiler and runtime sources have been unified.  It is no longer
    necessary to download separate archives in order to build the T2 or
    T3 compilers.  Because of this, two new configure options have been
    introduced in case you don't want to build the compilers:

      --disable-t2-compiler

    and:

      --disable-t3-compiler


v1.0
====

  - Git is now used for version control.  The repository is hosted at:

      http://www.assembla.com/spaces/frobtads

  - If the terminal size can't be detected, the interpreter will now
    assume 80x24.

  - The --undo-size option was wrongly documented as --t3undo.  This was
    changed in the code a while back, but the --help output stil refered
    to the old name.

  - Games requesting 0ms input-timeouts would result in the input
    operation blocking; this was incorrect behavior and has been fixed.
    0ms requests really mean "don't block and don't wait."

  - The flush() operation was not implemented correctly, which could in
    some cases lead to a game not displaying output.  This would happen
    if the game paused using timing functionality without using any
    input routines to achieve the pause effect.

  - The ChangeLog file has been deprecated and changes will not be
    recorded there any longer, since now we have "git log".

  - A new option has been introduced: -R/--replay which can be used to
    load replay files at startup.  Thanks to Marc Simpson for the patch.


v0.13
=====

  - Tads virtual machines and compilers updated to 2.5.14/3.0.18.1.


v0.12
=====

  - Tads 2 virtual machine and compiler updated to 2.5.11.


v0.11
=====

  - Tads 3 virtual machine and compiler updated to 3.0.16.
